<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.miqueiascordeiro.intelligentbank.cadastro">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Nome"
        android:id="@+id/tnome"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_below="@id/tnome"
        android:id="@+id/enome"/>
    <TextView
        android:id="@+id/tmail"
        android:layout_below="@+id/enome"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Email"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eemail"
        android:layout_below="@+id/tmail"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Sobrenome"
        android:layout_below="@+id/eemail"
        android:id="@+id/tsobrenome"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/esobrenome"
        android:layout_below="@+id/tsobrenome"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Senha"
        android:id="@+id/tsenha"
        android:layout_below="@+id/esobrenome"
        />
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/esenha"
        android:layout_below="@+id/tsenha"/>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Confirmarsenha"
        android:id="@+id/tconfirmarsenha"
        android:layout_below="@id/esenha"
        />
    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/econfirmarsenha"
        android:layout_below="@+id/tconfirmarsenha"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Salvar"
        android:id="@+id/bSalvar"
        android:layout_below="@+id/econfirmarsenha"
        android:onClick="cadastroUser" />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Cancelar"
        android:id="@+id/bCancelar"
        android:layout_below="@+id/econfirmarsenha"
        android:layout_alignParentRight="true"
        />
</RelativeLayout>
</ScrollView>
