<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.miqueiascordeiro.intelligentbank.MainActivity">
    <ImageView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@drawable/app"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Usuario"
        android:id="@+id/tUsuario"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/eUsuario"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:layout_below="@id/tUsuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/eSenha"
        android:layout_alignEnd="@+id/eSenha" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Senha"
        android:id="@+id/tSenha"
        android:layout_below="@+id/eUsuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginTop="20dp"
        android:id="@+id/eSenha"
        android:layout_below="@+id/eUsuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/Entrar"
        android:id="@+id/blogin"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="0dp"
        android:layout_below="@+id/eSenha"
        android:layout_alignLeft="@+id/eSenha"
        android:layout_alignStart="@+id/eSenha" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Ou"
        android:layout_centerHorizontal="true"
        android:id="@+id/tOu"
        android:layout_below="@id/blogin"/>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/bcadastro"
        android:layout_marginTop="5dp"
        android:text="@string/Cadastrar"
        android:layout_below="@id/tOu"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Desenvolvedor"
        android:textSize="15dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        />
</RelativeLayout>
